--- a/.cursorignore
+++ b/.cursorignore
@@ -23,7 +23,10 @@ scripts/artifacts/
 notebooks/artifacts/
 
 # ignore data directories
-data/
+# data/
+*.crc
+*.h5
+# *.parquet
 
 # ignore test outputs
 temp_test.py
