--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade pip setuptools wheel
+          pip install cython
           pip install -r requirements.txt
           pip install -r requirements-dev.txt
           pip install flake8 black isort mypy bandit safety pylint
@@ -132,7 +133,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade pip setuptools wheel
+          pip install cython
           pip install -r requirements.txt
           pip install -r requirements-dev.txt
           pip install pytest pytest-cov pytest-xdist pytest-mock
@@ -199,7 +201,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade pip setuptools wheel
+          pip install cython
           pip install -r requirements.txt
           pip install -r requirements-dev.txt
           pip install pytest pytest-cov
@@ -253,7 +256,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade pip setuptools wheel
+          pip install cython
           pip install -r requirements.txt
           pip install -r requirements-dev.txt
 
@@ -291,7 +295,7 @@ jobs:
 
       - name: Install build dependencies
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade pip setuptools wheel
           pip install build wheel setuptools
 
       - name: Build package
