--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -84,6 +84,18 @@ jobs:
           name: documentation
           path: docs/_build/html/
 
+      - name: Create gh-pages branch (if not exists)
+        if: github.ref == 'refs/heads/main'
+        run: |
+          git fetch origin gh-pages || (
+            echo "gh-pages branch does not exist, creating it..."
+            git checkout --orphan gh-pages
+            git reset --hard
+            git commit --allow-empty -m "Initialize gh-pages branch"
+            git push origin gh-pages
+            git checkout main
+          )
+
       - name: Deploy to GitHub Pages
         if: github.ref == 'refs/heads/main'
         uses: peaceiris/actions-gh-pages@v3
