--- a/.github/workflows/advanced-ci.yml
+++ b/.github/workflows/advanced-ci.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Generate cache key
         id: cache-key
         run: |
-          echo "key=deps-${{ hashFiles('**/requirements*.txt', '**/pyproject.toml') }}" >> $GITHUB_OUTPUT
+          echo "key=deps-v2-${{ hashFiles('**/requirements*.txt', '**/pyproject.toml') }}" >> $GITHUB_OUTPUT
       
       - name: Cache dependencies
         uses: actions/cache@v4
@@ -46,7 +46,7 @@ jobs:
             .venv
           key: ${{ steps.cache-key.outputs.key }}
           restore-keys: |
-            deps-
+            deps-v2-
       
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -55,13 +55,11 @@ jobs:
       
       - name: Install and cache dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r requirements-dev.txt
+          chmod +x .github/scripts/install_dependencies.sh
+          ./.github/scripts/install_dependencies.sh "safety"
           
       - name: Check for dependency vulnerabilities
         run: |
-          pip install safety
           safety check --json --output safety-report.json || true
           
       - name: Upload dependency report
@@ -321,7 +319,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: [docker-build]
     if: github.ref == 'refs/heads/main'
-    environment: production
     
     steps:
       - uses: actions/checkout@v4
@@ -347,9 +344,7 @@ jobs:
           # Add health check commands
           
       - name: Notify deployment
-        uses: 8398a7/action-slack@v3
         if: always()
-        with:
-          status: ${{ job.status }}
-          webhook_url: ${{ secrets.SLACK_WEBHOOK }}
-          text: "MICAP deployment to production: ${{ job.status }}" 
+        run: |
+          echo "MICAP deployment to production: ${{ job.status }}"
+          # Add notification logic here (Slack, email, etc.) 
