--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,17 +36,14 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
+          key: ${{ runner.os }}-pip-v2-${{ hashFiles('**/requirements*.txt') }}
           restore-keys: |
-            ${{ runner.os }}-pip-
+            ${{ runner.os }}-pip-v2-
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install cython
-          pip install -r requirements.txt
-          pip install -r requirements-dev.txt
-          pip install flake8 black isort mypy bandit safety pylint
+          chmod +x .github/scripts/install_dependencies.sh
+          ./.github/scripts/install_dependencies.sh "flake8 black isort mypy bandit safety pylint"
 
       - name: Code formatting check (Black)
         run: |
@@ -127,21 +124,14 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
+          key: ${{ runner.os }}-pip-v2-${{ hashFiles('**/requirements*.txt') }}
           restore-keys: |
-            ${{ runner.os }}-pip-
+            ${{ runner.os }}-pip-v2-
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install cython
-          pip install -r requirements.txt
-          pip install -r requirements-dev.txt
-          pip install pytest pytest-cov pytest-xdist pytest-mock
-
-      - name: Download spaCy model
-        run: |
-          python -m spacy download en_core_web_sm
+          chmod +x .github/scripts/install_dependencies.sh
+          ./.github/scripts/install_dependencies.sh "pytest pytest-cov pytest-xdist pytest-mock"
 
       - name: Run unit tests with coverage
         run: |
@@ -199,17 +189,18 @@ jobs:
           distribution: 'temurin'
           java-version: ${{ env.JAVA_VERSION }}
 
+      - name: Cache pip dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-v2-${{ hashFiles('**/requirements*.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-v2-
+
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install cython
-          pip install -r requirements.txt
-          pip install -r requirements-dev.txt
-          pip install pytest pytest-cov
-
-      - name: Download spaCy model
-        run: |
-          python -m spacy download en_core_web_sm
+          chmod +x .github/scripts/install_dependencies.sh
+          ./.github/scripts/install_dependencies.sh "pytest pytest-cov"
 
       - name: Run integration tests
         env:
@@ -254,12 +245,19 @@ jobs:
           distribution: 'temurin'
           java-version: ${{ env.JAVA_VERSION }}
 
+      - name: Cache pip dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-v2-${{ hashFiles('**/requirements*.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-v2-
+
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install cython
-          pip install -r requirements.txt
-          pip install -r requirements-dev.txt
+          chmod +x .github/scripts/install_dependencies.sh
+          export INSTALL_DEV=false
+          ./.github/scripts/install_dependencies.sh
 
       - name: Run performance benchmarks
         run: |
@@ -292,6 +290,14 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Cache pip dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-v2-${{ hashFiles('**/requirements*.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-v2-
 
       - name: Install build dependencies
         run: |
@@ -330,7 +336,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@0.31.0
+        uses: aquasecurity/trivy-action@master
         with:
           scan-type: 'fs'
           scan-ref: '.'
@@ -350,7 +356,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build, security-scan]
     if: github.ref == 'refs/heads/develop'
-    environment: staging
     
     steps:
       - name: Checkout code
@@ -370,7 +375,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build, security-scan]
     if: github.ref == 'refs/heads/main'
-    environment: production
     
     steps:
       - name: Checkout code
