--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,9 @@
 # Development and Testing Dependencies for MICAP
 
-# Build dependencies
-cython>=3.0.0  # Required for building some dependencies like PyYAML
+# Build dependencies - MUST BE INSTALLED FIRST
+cython>=3.0.11  # Required for building PyYAML and other C extensions
+setuptools>=75.3.0  # Latest setuptools for better build support
+wheel>=0.45.1  # Latest wheel for building
 
 # Testing frameworks
 pytest>=7.4.0
@@ -55,8 +57,6 @@ python-dotenv>=1.0.0
 
 # Build and packaging
 build>=0.10.0
-wheel>=0.41.0
-setuptools>=68.0.0
 twine>=4.0.0
 
 # Development utilities
